# Movie-Database

MovieDatabase/: CMakeLists.txt  watchlist.csv
MovieDatabase/include/: CSVWatchList.h  HTMLWatchList.h  add_command.h  command.h  exceptions.h  fileWatchList.h  movie.h  remove_command.h  repo.h  service.h  update_command.h  watchList.h
MovieDatabase/src/: CSVWatchList.cpp  HTMLWatchList.cpp  add_command.cpp  adminGUI.cpp  adminGUI.h  exceptions.cpp  fileWatchList.cpp  main.cpp  mainwindow.cpp  mainwindow.h  movie.cpp  remove_command.cpp  repo.cpp  service.cpp  update_command.cpp  userGUI.cpp  userGUI.h  watchList.cpp  watchListModel.cpp  watchListModel.h
